<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#777777"
        android:gravity="center"
        android:includeFontPadding="true"
        android:text="@string/headerTitleView"
        android:textColor="#111111"
        android:textSize="38sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleBox"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:text="@string/subtitleText"
        android:textSize="19sp"
        android:gravity="center|top"
        android:includeFontPadding="true"
        android:background="#555555"
        android:textColor="#999999"
        app:layout_constraintTop_toBottomOf="@id/headerTitle"
        app:layout_constraintBottom_toTopOf="@id/svListBox"
        />

    <ScrollView
        android:id="@+id/svListBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="19dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutNewList"
        app:layout_constraintTop_toBottomOf="@id/subtitleBox">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ListGroupView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutNewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svListBox">

        <EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/listDefaultName"
            android:inputType="text"
            android:autofillHints="" />

        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/btnNewListText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>