<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListDetailsActivity">

    <TextView
        android:id="@+id/listName"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="112dp"
        android:text="@string/listDefaultTitle"
        android:textSize="29sp"
        android:gravity="center"
        android:includeFontPadding="true"
        android:background="#777777"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/pbTwo"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pbTwo"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginHorizontal="40dp"
        android:progress="0"
        android:max="100"
        android:background="#777777"
        android:progressTint="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/rvListItems" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pbTwo"
        tools:itemCount="8" />

    <EditText
        android:id="@+id/etNewItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/itemName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddItem"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/btnAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteItem" />

    <Button
        android:id="@+id/btnDeleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>